--- a/style.css
+++ b/style.css
@@ -82,3 +82,8 @@ form input{
     
 
 }
+.btnyellow1{
+    background-color: rgb(223, 93, 23);
+    color: white;
+    /* border-radius: 100px; */
+}
